@@ -1,5 +1,13 @@
 2005-11-08  Vincent Noel <vnoel@cox.net>
 
+	* Makefile.am:
+	* log_repaint.c: (logview_update_statusbar):
+	* logview.c: (logview_menus_set_state): 
+	* info.c, info.h: remove, the same info is now 
+	available in the status bar.
+
+2005-11-08  Vincent Noel <vnoel@cox.net>
+
 	* logrtns.c: (log_read_new_lines):
 	* logview.c: (logview_toggle_statusbar), (logview_toggle_sidebar),
 	(logview_toggle_calendar), (logview_init), (logview_window_new):
